# mep-quotation-engine

./: .gitattributes  .gitignore  README.md  feasibility_reset.md  feasibility_summary.md  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
.agents/: AGENTS.md
docs/: sprint-00-foundation.md
feasibility_outputs/: abb_batch_invalid_items.json  abb_batch_items.json  abb_batch_items.xlsx  abb_batch_page_summary.json  abb_batch_report.md  abb_page18_items.json  abb_page18_items.xlsx  abb_page18_report.md  abb_page21_dump.txt  abb_page33_dump.txt  abb_page41_dump.txt  abb_page52_dump.txt  ls_page3_dump.txt  page18_layout_analysis.txt  page21_layout_analysis.txt  survey_page18_words.json  survey_page_18_text.txt  survey_page_19_text.txt  survey_page_20_text.txt  survey_page_21_text.txt  survey_page_32_text.txt  survey_page_33_text.txt  survey_page_34_text.txt  survey_page_41_text.txt  survey_page_42_text.txt  survey_page_52_text.txt  survey_page_53_text.txt  survey_page_54_text.txt  survey_page_61_text.txt
mep_quotation/: __init__.py
profile_study_notes/: batch_abb.md  batch_btb.md  batch_chint.md  batch_emic.md  batch_mitsu.md  batch_remaining_priority_01.md  batch_schneider.md  batch_shihlin_tubu.md  source_inventory_root.md
schemas/: corrections.schema.json  excel_export_manifest.schema.json  item_candidates.schema.json  line_candidates.schema.json  material_index.schema.json  normalized.schema.json  normalized_draft.schema.json  page_manifest.schema.json  pdf_metadata.schema.json  quotation_package.schema.json  quotation_text.schema.json  (+4 more)
(+393 files in other folders)
