[project]
name = "mep-quotation"
version = "1.0.0"
description = "MEP Quotation Pipeline Phase 1 - Foundation"
authors = [
    { name = "Gemini Code Expert" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mep_quotation*"]
exclude = ["data*", "schemas*", "tests*", "scripts*"]
