[project]
name = "mep-quotation"
version = "1.0.0"
description = "MEP Quotation Pipeline - Foundation and PDF Intake"
authors = [
    { name = "Gemini Code Expert" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.36.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mep_quotation*"]
exclude = ["data*", "schemas*", "tests*", "scripts*"]
